# sztuczna-inteligencja

./: .gitignore  Readme.md  pyproject.toml
lab1/: Readme.md  lab_1.html  lab_1.ipynb  lab_1.py  lab_1_3.ipynb  lab_1_3.py  lab_1_IgaAntonik.ipynb  lab_1_introduction.ipynb
lab2/: Readme.md  feature_names.json  lab_2-Copy1.ipynb  lab_2-Copy1.py  lab_2.html  lab_2.ipynb  lab_2.py  lab_2_IgaAntonik.ipynb  notebook_empty.ipynb
lab3/: Readme.md  lab_3.html  lab_3.ipynb  lab_3_IgaAntonik.ipynb
lab4/: Readme.md  lab_4.ipynb
lab5/: Lab5.ipynb  Readme.md  lab_5.ipynb
lab6/: Lab6.ipynb  Readme.md  lab_6.ipynb
lab7/: Readme.md  lab_7.ipynb  lab_7.py  tictactoe.ipynb
