[tool.poetry]
name = "ai-course-agh"
version = "0.1.0"
description = "Exercises for AI course at AGH."
authors = ["Aleksander Smywinski-Pohl <apohllo@o2.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

imbalanced-learn = "^0.12.4"
jupyterlab = "^4.2.5"
jupyterlab-execute-time = "^3.2.0"
jupytext = "^1.16.4"
lightgbm = "^4.5.0"
matplotlib = "^3.9.2"
missingno = "^0.5.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
imblearn = "^0.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
opencv-python = "^4.10.0.84"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
